[gd_scene load_steps=2 format=3 uid="uid://dq6t62y2xlvej"]

[ext_resource type="Script" path="res://load_program_menu.gd" id="1_nrxap"]

[node name="LoadProgramMenu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_nrxap")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Close" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
theme_type_variation = &"LoadProgramButton"
text = "X"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NameVBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OpenLocalFolder" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_type_variation = &"ButtonMenu"
text = "Open local folder"

[node name="CodeVBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/CodeVBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
autowrap_mode = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/CodeVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"BackgroundPanelContainer"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/CodeVBoxContainer/PanelContainer"]
layout_mode = 2

[node name="CodeLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/CodeVBoxContainer/PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LoadButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/CodeVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"ButtonMenu"
disabled = true
text = "Load"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/OpenLocalFolder" to="." method="_on_open_local_folder_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CodeVBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
